created article portion

--- a/posts.html
+++ b/posts.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Assignment</title>
     <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
+    <script defer type="module" src="script.js"></script>
     <style>
       h2,
       p::first-letter {
@@ -92,7 +93,5 @@
         </section>
       </details>
     </main>
-
-    <script type="module" src="script.js"></script>
   </body>
 </html>
